// Copyright 2017 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package milo;

import "google/protobuf/timestamp.proto";

// ConsoleGitInfo stores memcache-able data that the console view will use when
// displaying git commits. A compressed ConsoleGitInfo should always be < 1MB,
// so don't put anything too big in here.
message ConsoleGitInfo {
  message Commit {
    // The raw commit hash.
    bytes hash = 1;

    // The author name (e.g. "Rey Cool")
    string author_name = 2;

    // The author email (e.g. "rey_cool@example.com")
    string author_email = 3;

    // The commit timestamp (~= when the commit landed... not always true!).
    google.protobuf.Timestamp commit_time = 4;

    // The raw commit message as text.
    string msg = 5;
  }

  repeated Commit commits = 1;
}
